argo-rollouts/assets/03.canary-advanced/03.rollout.yaml
---
# Rollout
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: example-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: nginx
        image: kalioz/canary-deployment-ui:v1.1.0-ying
        ports:
        - containerPort: 80
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 75
      - pause: {} # pause indefinitly - wait for manual input.
