argo-rollouts/assets/03.canary-advanced/03.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /stable/(.*)
        backend:
          serviceName: rollouts-demo-stable
          servicePort: 8080
  - http:
      paths:
      - path: /preview/(.*)
        backend:
          serviceName: rollouts-demo-canary
          servicePort: 8080
